@@ -319,14 +319,8 @@ inkscape_LDFLAGS = --export-dynamic $(kdeldflags)
 inkview_SOURCES = inkview.cpp $(win32_sources)
 inkview_LDADD = $(all_libs)
 
-dir_util_test_SOURCES = dir-util-test.cpp utest/test-2ary-cases.h
-dir_util_test_LDADD = dir-util.$(OBJEXT) -lglib-2.0
-
 mod360_test_SOURCES = mod360-test.cpp
 mod360_test_LDADD = libinkpre.a -lglib-2.0
-
-extract_uri_test_SOURCES = extract-uri-test.cpp
-extract_uri_test_LDADD = libinkpre.a -lglib-2.0
 
 round_test_SOURCES = round-test.cpp
 round_test_LDADD = libinkpost.a
@@ -346,4 +340,6 @@ inkscape_version.h: ../configure.ac
 test_all_includes = \
 		attributes-test.h	\
 		color-profile-test.h	\
+		dir-util-test.h	\
+		extract-uri-test.h	\
 		verbs-test.h
